--- a/member/modify.html
+++ b/member/modify.html
@@ -1,5 +1,4 @@
 <?php
-session_start();
 include "../header.php";
 include "../body.php";
 include "../db.php";
@@ -94,7 +93,7 @@ mysqli_close($conn);
 									<label>우편번호 <input type="text" id="zip" name="zip" class="input-text ml5" style="width:242px" value=<?php echo $zip ?> readonly /></label><a href="#" class="btn-s-tin ml10"  onclick="daum_api();">주소찾기</a>
 								</p>
 								<p class="mt10">
-									<label>기본주소 <input type="text" id="address1" name="address1" class="input-text ml5" style="width:719px" value="<?php echo $address1 ?>"></label>
+									<label>기본주소 <input type="text" id="address1" name="address1" class="input-text ml5" style="width:719px" value="<?php echo $address1 ?>" readonly></label>
 								</p>
 								<p class="mt10">
 									<label>상세주소 <input type="text" id="address2" name="address2" class="input-text ml5" style="width:719px" value="<?php echo $address2 ?>"></label>
