--- a/member/login.html
+++ b/member/login.html
@@ -13,7 +13,7 @@ include "../header.php";
 					<input type="text" class="input-text mb5" name="id" placeholder="아이디" style="width:190px" required/>
 					<input type="password" class="input-text" name="password" placeholder="비밀번호" style="width:190px" required/>
 				</div>
-				<button type="submit" class="btn-login">로그인</button>
+				<input type="submit" class="btn-login" value="로그인">
 				</form>
 			</div>
 			
