--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ include "body.php";
 		<div class="quick-bar">
 			<div class="inner p-r">
 				<ul class="list-link">
-					<li><a href="#" class="txt">로그인</a></li>
+					<li><a href="/member/login.html" class="txt">로그인</a></li>
 					<li><a href="#" class="txt">상담신청</a></li>
 					<li><a href="#" class="txt">장바구니</a></li>
 				</ul>
