--- a/lecture_board/board_insert.html
+++ b/lecture_board/board_insert.html
@@ -1,5 +1,8 @@
 <?php
 session_start();
+if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
 include "../header.php";
 include "../body.php";
 include "../db.php";
