--- a/admin/lecture_read.html
+++ b/admin/lecture_read.html
@@ -3,6 +3,9 @@ session_start();
 include "../header.php";
 include "../body.php";
 include "../db.php";
+if(!preg_match("/".$_SERVER['HTTP_HOST']."/i",$_SERVER['HTTP_REFERER'])) {
+	echo '<script>alert("잘못된 접근입니다.");location.href="/index.html"</script>';
+}
 $num = $_GET['num'];
 if(isset($_GET['page'])){
     $page = $_GET['page'];
