--- a/lecture_board/board_read.html
+++ b/lecture_board/board_read.html
@@ -265,7 +265,7 @@ $currentLimit = ($onePage * $page) - $onePage;
 								<td>'.$board_num.'</td>
 								<td>'.$lecture_kind.'</td>
 								<td>
-									<a href="board_read.html?page=1&num='.$board_num.'">
+									<a href="board_read.html?page='.$page.'&num='.$board_num.'">
 									<span class="tc-gray ellipsis_line">수강 강의명 : '.$lecture_title.'</span>
 									<strong class="ellipsis_line">'.$board_title.'</strong>
 									</a>
